--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -9,11 +9,11 @@
     "Hashtags, Discover, DMs": "Tags #, Découverte, Messages directs",
     "Free Software": "Logiciel libre",
     "Free software is important": "Le logiciel libre est important",
-    "Admin Friendly": "Pensé pour les administrateurs",
-    "Powerful dashboard/tools": "Interface d'administration et outils puissant⋅e⋅s",
-    "Developer Friendly": "Pensé pour les développeurs",
+    "Admin Friendly": "Administration aisée",
+    "Powerful dashboard/tools": "Interface d'administration et outils puissants",
+    "Developer Friendly": "Pensé pour les développeur.se.s",
     "APIs that won't change": "Les API ne changeront pas",
-    "User Friendly": "Pensé pour l'utilisateur",
+    "User Friendly": "Facile d'utilisation",
     "Import/Export, Filter, Block": "Importation/Exportation, Filtres, Blocages",
     "A Photo Sharing Experience": "Une expérience de partage photo",
     "for everyone": "pour tout le monde",
